help with a href, thanks Robbert

--- a/index.html
+++ b/index.html
@@ -9,23 +9,14 @@
   <header>
     <h1>THE JARED BUTTREY</h1>
     <section>
-        <ul>
-            <li>
-                <a href="#about-me">About Me</a>
-            </li>
-            <li>
-                <a href="#job-history">Job History</a>
-            </li>
-            <li>
-                <a href="#contact-info">Contact Info</a>
-            </li>
-        </ul>
-    </section>
-
-    <section>
+        <a href="#AboutMe">About Me</a>
         <button type="button">About Me</button>
         <button type="button">Job History</button>
         <button type="button">Contact Info</button>
+        </section>
+        </header>
+        <section style="margin-top: 2000px;" id="AboutMe"> 
+            About Me 
         </section>
 
 </head>
