Re-did contact info for readability, Added years to experience

--- a/index.html
+++ b/index.html
@@ -31,41 +31,33 @@
           Job History & Experience
             </h3>
       <div class="pictures">
-        <div>  
+       <div>  
         <img id="mechanic" src="assets/mechanic.jpg" alt="mechanic">
           <br>
-          <p>American Car & Truck Care</p>
+          <p>American Car & Truck Care:</p>
+          <p>Started 2004, Ended 2022</p>
           <p></p>President, GM, Service Manager</p>
           <p>Service Advisor, Service Technician</p>
           <p>Tire & Lube Technician</p>
-          </div>
-          <div class="pictohyper">
+       </div>
+        <div class="pictohyper">
             <img id="codesample" src="./assets/codework.jpg" alt="gibberishcode">
           <img id="coding" src="./assets/codingimage.jpg" alt="guycoding">
-         <br>
+          <br>
           <a href="https://jayrodbutray.github.io/challenge_1_webrevamp/">My First Work As A Coder</a>
           <p>
             Started April 2023
            </p>
         </div>
-        </div>
+      </div>
       </div>  
           
           <div class="contactform" id="ContactMe">
-            Contact Me
-            <div class="container">
-              <label for="fname">First Name</label>
-              <input type="text" id="fname" name="firstname" placeholder="Your name">
-              <label for="lname">Last Name</label>
-              <input type="text" id="lname" name="lastname" placeholder="Your last name">
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email" placeholder="Your email">
-              <input type="submit" value="Submit">
+            Contact Me:  Jared Buttrey P:505-974-4859  email: geraldomania@hotmail.com
             </div>
-            </div>
-            </div>
+      </div>
         
-      </main>
+    </main>
 </body>
 <footer>
 <h1>🖥️Made By Jared Buttrey</h1>
