added new pics, re-styled job area of page, font

--- a/index.html
+++ b/index.html
@@ -21,11 +21,22 @@
           <h3> 
             About Me
           </h3>
+         <div class="aboutme">
+          <div>
+          <img id="Jaredspic" src="assets/jaredspic.jpg" alt="jaredspic">
+          <br>
           <p>
             I am 40  years old! I love ALL sports and staying very active!
           </p>
-          <img id="Jaredspic" src="assets/jaredspic.jpg" alt="jaredspic">
           </div>
+      <div class="measspiderman">
+          <img id="Spiderman" src="./assets/measspiderman.jpg" alt="jaredisspiderman">
+      <br>
+      <p>
+        I'm an aspiring Spider-man and you can't tell me otherwise
+      </p>
+      </div>
+      </div>
       <div class="jobinfo" id="JobHistory">
             <h3>
           Job History & Experience
