added project one link

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
           <img id="coding" src="./assets/codingimage.jpg" alt="guycoding">
           <br>
           <a href="https://jayrodbutray.github.io/challenge_1_webrevamp/">My First Work As A Coder</a>
+          <br>
+          <a href="https://tannerrhines.github.io/BerkeleyRacingClub/">My First Team Project</a>
           <p>
             Started April 2023
            </p>
