--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <br>
           <a href="https://jayrodbutray.github.io/challenge_1_webrevamp/">My First Work As A Coder</a>
           <br>
+          <img id="raceclub" src="./assets/berkleyraceclub.png">
           <a href="https://tannerrhines.github.io/BerkeleyRacingClub/">My First Team Project</a>
           <p>
             Started April 2023
