added first work and styling

--- a/index.html
+++ b/index.html
@@ -78,20 +78,21 @@
             </div>
 
             <div class="pictohyper">
-              <a href="https://jayrodbutray.github.io/challenge_1_webrevamp/"style="font-family: Arial, sans-serif; font-size: 30px; font-weight: bold; color: red; text-decoration: none;">My First Work As A Coder</a>
+              <a href="https://jayrodbutray.github.io/challenge_1_webrevamp/"style="font-family: Arial, sans-serif; font-size: 30px; font-weight: bold; color: red; text-decoration: bold;">My First Work As A Coder</a>
               <br>
+              <img id="firstwork" src="./assets/Myfirstwork.png" alt="firstwork">
               <img id="codesample" src="./assets/codework.jpg" alt="gibberishcode">
               <img id="coding" src="./assets/codingimage.jpg" alt="guycoding">
               <br>
-              <a href="https://tannerrhines.github.io/BerkeleyRacingClub/"style="font-family: Arial, sans-serif; font-size: 30px; font-weight: bold; color: red; text-decoration: none;">My First Team Project</a>
+              <a href="https://tannerrhines.github.io/BerkeleyRacingClub/"style="font-family: Arial, sans-serif; font-size: 30px; font-weight: bold; color: red; text-decoration: bold;">My First Team Project</a>
               <br>
               <img id="raceclub" src="./assets/berkleyraceclub.png" alt="Berkeley Race Club">
               <br>
-              <a href="https://horse-creator-app-9839a5a7a948.herokuapp.com/"style="font-family: Arial, sans-serif; font-size: 30px; font-weight: bold; color: red; text-decoration: none;">Our Teams Second Project</a>
+              <a href="https://horse-creator-app-9839a5a7a948.herokuapp.com/"style="font-family: Arial, sans-serif; font-size: 30px; font-weight: bold; color: red; text-decoration: bold;">Our Teams Second Project</a>
               <br>
               <img id="horsecreator" src="./assets/horse_creator.png" alt="horsecreator" style="max-width: 100%; height: auto;">
               <br>
-              <a href="https://museum-gallery-d60bff79cfff.herokuapp.com/"style="font-family: Arial, sans-serif; font-size: 30px; font-weight: bold; color: red; text-decoration: none;">Our Teams Third & Final Project</a>
+              <a href="https://museum-gallery-d60bff79cfff.herokuapp.com/"style="font-family: Arial, sans-serif; font-size: 30px; font-weight: bold; color: red; text-decoration: bold;">Our Teams Third & Final Project</a>
               <br>
               <img id="arthub" src="./assets/BerkeleyArtHubProject3.png" alt="arthub" style="max-width: 100%; height: auto;">
               <br>
