--- a/index.html
+++ b/index.html
@@ -108,12 +108,17 @@
           
           <div class="contactform" id="ContactMe">
             Contact Me:  Jared Buttrey P:505-974-4859  email: geraldomania@hotmail.com
-            </div>
+            <div>
+              My Resume:
+          </div>
+          <div class="resume">
+              <iframe src="./assets/JARED%20BUTTREY%201.pdf" width="100%" height="500px"></iframe>
+          </div>
       </div>
         
     </main>
 </body>
 <footer>
-<h1>🖥️Made By Jared Buttrey</h1>
+<h1>🖥️Made By Jared Buttrey 2023</h1>
 </footer>
 </html>
